--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="info.firozansari.notes_mvvm">
+    package="info.firozansari.notes">
 
     <application
         android:name=".SampleApp"
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="info.firozansari.notes_mvvm.MainActivity">
+        <activity android:name="info.firozansari.notes.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
