--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "info.firozansari.notes_mvvm"
+        applicationId "info.firozansari.notes"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
